17: Add general runner that redirects process streams Add compiler error output for compiling with commands Make custom compiler/runner accept any string, not just file paths Change Compiler.start logging and return logic (command-compile is only true for exitValue 0)